WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129108
Dynamically generated JSExport protocols added to a class results in a crash
https://bugs.webkit.org/show_bug.cgi?id=129108
Summary
Dynamically generated JSExport protocols added to a class results in a crash
Mark Hahnenberg
Reported
2014-02-20 10:07:52 PST
We're not getting any information from the runtime about the types of the methods on these protocols because they didn't exist at compile time. We should handle this gracefully.
Attachments
Patch
(3.94 KB, patch)
2014-02-20 10:10 PST
,
Mark Hahnenberg
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Hahnenberg
Comment 1
2014-02-20 10:08:16 PST
<
rdar://problem/15184814
>
Mark Hahnenberg
Comment 2
2014-02-20 10:10:32 PST
Created
attachment 224767
[details]
Patch
WebKit Commit Bot
Comment 3
2014-02-20 11:34:47 PST
Comment on
attachment 224767
[details]
Patch Clearing flags on attachment: 224767 Committed
r164439
: <
http://trac.webkit.org/changeset/164439
>
WebKit Commit Bot
Comment 4
2014-02-20 11:34:48 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug